hphp/hack/test/typecheck/type_structure/classname_tyvar.php.exp
ERROR: File "classname_tyvar.php", line 14, characters 68-78:
This shape doesn't have a field `classname` (Typing[4108])
  File "typestructure.hhi", line 59, characters 31-699:
  The shape is defined here
ERROR: File "classname_tyvar.php", line 15, characters 19-45:
The two arguments to `HH\type_structure_classname()` must be:
 - first: `ValidClassname::class` or an object of that class
 - second: a single-quoted string literal containing the name of a type constant of that class
The type constant does not resolve to a classish type (Typing[4150])
ERROR: File "classname_tyvar.php", line 20, characters 56-57:
Invalid argument (Typing[4110])
  File "classname.hhi", line 51, characters 43-63:
  Expected `classname<_>`
  File "classname_tyvar.php", line 12, characters 5-11:
  But got `dynamic`
ERROR: File "classname_tyvar.php", line 21, characters 69-70:
Invalid argument (Typing[4110])
  File "classname.hhi", line 51, characters 43-63:
  Expected `classname<_>`
  File "classname_tyvar.php", line 12, characters 5-11:
  But got `dynamic`
